{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 430,
  "lineage": "9c66ebf0-abdb-77be-203a-805fe2e6765c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/db_nsg",
            "location": "westeurope",
            "name": "db_nsg",
            "resource_group_name": "cloud_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "db_rule_influxdb_output",
                "priority": 107,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "8086",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "db_rule_postgres_output",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5432",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "db_rule_sqlserver_output",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "1433",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db_rule_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db_rule_sqlserver_input",
                "priority": 104,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db_rule_msql_input",
                "priority": 102,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db_rule_postgres_input",
                "priority": 106,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8086",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db_rule_influxdb_input",
                "priority": 108,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.6",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "db_rule_msql_output",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3306",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "extractors_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg",
            "location": "westeurope",
            "name": "extractors_nsg",
            "resource_group_name": "cloud_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "extractors_rule_ssh",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.6",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "extractors_rule_mysql",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3306",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "50051",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "grcp_rule_ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "50051",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "grcp_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/grcp_nsg",
            "location": "westeurope",
            "name": "grcp_nsg",
            "resource_group_name": "cloud_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "grcp_rule_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "50051",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "grcp_rule_grcp_in",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "50051",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/jumpbox_nsg",
            "location": "westeurope",
            "name": "jumpbox_nsg",
            "resource_group_name": "cloud_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jumpbox_rule_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/db_subnet",
            "name": "db_subnet",
            "resource_group_name": "cloud_rg",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "extractors_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet",
            "name": "extractors_subnet",
            "resource_group_name": "cloud_rg",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grcp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/grcp_subnet",
            "name": "grcp_subnet",
            "resource_group_name": "cloud_rg",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/jumpbox_subnet",
            "name": "jumpbox_subnet",
            "resource_group_name": "cloud_rg",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/db_subnet",
            "network_security_group_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/db_nsg",
            "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/db_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "extractors_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet",
            "network_security_group_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg",
            "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.extractors_nsg",
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.extractors_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "grcp_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/grcp_subnet",
            "network_security_group_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/grcp_nsg",
            "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/grcp_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.grcp_nsg",
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.grcp_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jumpbox_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/jumpbox_subnet",
            "network_security_group_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/jumpbox_nsg",
            "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/jumpbox_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.jumpbox_nsg",
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.jumpbox_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c7e595af-a452-4e1f-aa3d-7c68b76f7974",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn",
            "location": "westeurope",
            "name": "vn",
            "resource_group_name": "cloud_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/db_subnet",
                "name": "db_subnet",
                "security_group": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/db_nsg"
              },
              {
                "address_prefix": "10.0.10.0/24",
                "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/jumpbox_subnet",
                "name": "jumpbox_subnet",
                "security_group": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/jumpbox_nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet",
                "name": "extractors_subnet",
                "security_group": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/grcp_subnet",
                "name": "grcp_subnet",
                "security_group": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/grcp_nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cq_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkInterfaces/cq_ni",
            "internal_domain_name_suffix": "v4k4lr0suqpu3kr3prulo11zoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-1E-52-61-0F-52",
            "name": "cq_ni",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "cloud_rg",
            "virtual_machine_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Compute/virtualMachines/cq-vm"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.extractors_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mysql_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkInterfaces/mysql_ni",
            "internal_domain_name_suffix": "v4k4lr0suqpu3kr3prulo11zoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-ED-8D-13-39-15",
            "name": "mysql_ni",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "cloud_rg",
            "virtual_machine_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Compute/virtualMachines/mysql-vm"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.extractors_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sqls_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkInterfaces/sqls_ni",
            "internal_domain_name_suffix": "v4k4lr0suqpu3kr3prulo11zoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.7",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/extractors_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-ED-8D-0C-B9-46",
            "name": "sqls_ni",
            "private_ip_address": "10.0.2.7",
            "private_ip_addresses": [
              "10.0.2.7"
            ],
            "resource_group_name": "cloud_rg",
            "virtual_machine_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Compute/virtualMachines/sqls-vm"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.extractors_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "extractors_rule_grcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.3.5",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "50051",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg/securityRules/grcp_rule_ssh",
            "name": "grcp_rule_ssh",
            "network_security_group_name": "extractors_nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "50051",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.extractors_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "extractors_rule_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.6",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg/securityRules/extractors_rule_mysql",
            "name": "extractors_rule_mysql",
            "network_security_group_name": "extractors_nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "3306",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.extractors_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.extractors",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "extractors_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.5",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/extractors_nsg/securityRules/extractors_rule_ssh",
            "name": "extractors_rule_ssh",
            "network_security_group_name": "extractors_nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.extractors_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.grpc",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "grpc_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkInterfaces/grpc_ni",
            "internal_domain_name_suffix": "v4k4lr0suqpu3kr3prulo11zoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/grcp_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-ED-8D-0F-F8-11",
            "name": "grpc_ni",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "cloud_rg",
            "virtual_machine_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Compute/virtualMachines/grpc-vm"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.grcp_subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "module": "module.grpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grcp_rule_extractors_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.3.5",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "50051",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/grcp_nsg/securityRules/grcp_rule_grcp_in",
            "name": "grcp_rule_grcp_in",
            "network_security_group_name": "grcp_nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "50051",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.grcp_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.grpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grcp_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.3.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/grcp_nsg/securityRules/grcp_rule_ssh",
            "name": "grcp_rule_ssh",
            "network_security_group_name": "grcp_nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "10.0.10.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.grcp_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkInterfaces/jumpbox_ni",
            "internal_domain_name_suffix": "v4k4lr0suqpu3kr3prulo11zoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.10.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/publicIPAddresses/jumpbox_public_ip",
                "subnet_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/virtualNetworks/vn/subnets/jumpbox_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4B-C3-F5",
            "name": "jumpbox_ni",
            "private_ip_address": "10.0.10.5",
            "private_ip_addresses": [
              "10.0.10.5"
            ],
            "resource_group_name": "cloud_rg",
            "virtual_machine_id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Compute/virtualMachines/jumpbox-vm"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg",
            "azurerm_subnet.jumpbox_subnet",
            "azurerm_virtual_network.vn",
            "module.jumpbox.azurerm_public_ip.jumpbox_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jumpbox_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/networkSecurityGroups/jumpbox_nsg/securityRules/jumpbox_rule_ssh",
            "name": "jumpbox_rule_ssh",
            "network_security_group_name": "jumpbox_nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cloud_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.jumpbox_nsg",
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumpbox_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/16a94b55-2151-4fa9-8684-2ad3cd089429/resourceGroups/cloud_rg/providers/Microsoft.Network/publicIPAddresses/jumpbox_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.127.90",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jumpbox_public_ip",
            "resource_group_name": "cloud_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cloud_rg"
          ]
        }
      ]
    }
  ]
}